--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
             {
                 window.open("zad5_menu.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=220,width=760,top=150,left=600");
             }
+            function WinOpen_z6_kowalski()
+            {
+                window.open("zad6_kowa.html","okienko_z6","toolbar=no,directories=no,menubar=no");
+            }
+            function WinOpen_z7_kowalski()
+            {
+                window.open("zad7_kowa.html","okienko_z7","toolbar=no,directories=no,menubar=no");
+            }
+            function WinOpen_z8_kowalski()
+            {
+                window.open("zad8_kowa.html","okienko_z8","toolbar=no,directories=no,menubar=no");
+            }
+            function WinOpen_z9_kowalski()
+            {
+                window.open("zad9_kowa.html","okienko_z9","toolbar=no,directories=no,menubar=no");
+            }
             function okno_zamknij_kowalski()
             {
                 window.close()
@@ -36,6 +52,10 @@
             <input type="button_z3" name="zadanie3" value="zadanie3-kowalski" onclick="WinOpen_z3_kowalski('')">
             <input type="button_z4" name="zadanie4" value="zadanie4-kowalski" onclick="WinOpen_z4_kowalski('')">
             <input type="button_z5" name="zadanie5" value="zadanie5-kowalski" onclick="WinOpen_z5_kowalski('')">
+            <input type="button_z6" name="zadanie6" value="zadanie6-kowalski" onclick="WinOpen_z6_kowalski('')">
+            <input type="button_z7" name="zadanie7" value="zadanie7-kowalski" onclick="WinOpen_z7_kowalski('')">
+            <input type="button_z8" name="zadanie8" value="zadanie8-kowalski" onclick="WinOpen_z8_kowalski('')">
+            <input type="button_z9" name="zadanie9" value="zadanie9-kowalski" onclick="WinOpen_z9_kowalski('')">
             <input type="button" value="zamknij okno" onclick="okno_zamknij_kowalski('')"/>
         </form>
     </body>
