--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             {
                 window.open("zad9_kowa.html","okienko_z9","toolbar=no,directories=no,menubar=no");
             }
+            function WinOpen_z10_kowalski()
+            {
+                window.open("zad10_kowa.html","okienko_z10","toolbar=no,directories=no,menubar=no");
+            }
+            function WinOpen_z11_kowalski()
+            {
+                window.open("zad11_kowa.html","okienko_z11","toolbar=no,directories=no,menubar=no");
+            }
             function okno_zamknij_kowalski()
             {
                 window.close()
@@ -56,6 +64,8 @@
             <input type="button_z7" name="zadanie7" value="zadanie7-kowalski" onclick="WinOpen_z7_kowalski('')">
             <input type="button_z8" name="zadanie8" value="zadanie8-kowalski" onclick="WinOpen_z8_kowalski('')">
             <input type="button_z9" name="zadanie9" value="zadanie9-kowalski" onclick="WinOpen_z9_kowalski('')">
+            <input type="button" value="zadanie 10" onclick="WinOpen_z10_kowalski('')">
+            <input type="button" value="zadanie 11" onclick="WinOpen_z11_kowalski('')">
             <input type="button" value="zamknij okno" onclick="okno_zamknij_kowalski('')"/>
         </form>
     </body>
