--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
             {
                 window.open("zad11_kowa.html","okienko_z11","toolbar=no,directories=no,menubar=no");
             }
+            function z17_kowalski()
+            {
+                window.open("zad17_kowa.html","okienko_z17","toolbar=no,directories=no,menubar=no");
+            }
+            function z18_kowalski()
+            {
+                window.open("zad18_kowa.html","okienko_z18","toolbar=no,directories=no,menubar=no");
+            }
             function okno_zamknij_kowalski()
             {
                 window.close()
@@ -66,6 +74,8 @@
             <input type="button_z9" name="zadanie9" value="zadanie9-kowalski" onclick="WinOpen_z9_kowalski('')">
             <input type="button" value="zadanie 10" onclick="WinOpen_z10_kowalski('')">
             <input type="button" value="zadanie 11" onclick="WinOpen_z11_kowalski('')">
+            <input type="button" value="zadanie 17" onclick="z17_kowalski('')">
+            <input type="button" value="zadanie 18" onclick="z18_kowalski('')">
             <input type="button" value="zamknij okno" onclick="okno_zamknij_kowalski('')"/>
         </form>
     </body>
