--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
             {
                 window.open("zad18_kowa.html","okienko_z18","toolbar=no,directories=no,menubar=no");
             }
+            function z19_kowalski()
+            {
+                window.open("zad19_kowa.html","okienko_z19","toolbar=no,directories=no,menubar=no");
+            }
+            function z21_kowalski()
+            {
+                window.open("zad21_kowa.html","okienko_z21","toolbar=no,directories=no,menubar=no");
+            }
             function okno_zamknij_kowalski()
             {
                 window.close()
@@ -76,6 +84,8 @@
             <input type="button" value="zadanie 11" onclick="WinOpen_z11_kowalski('')">
             <input type="button" value="zadanie 17" onclick="z17_kowalski('')">
             <input type="button" value="zadanie 18" onclick="z18_kowalski('')">
+            <input type="button" value="zadanie 19" onclick="z19_kowalski('')">
+            <input type="button" value="zadanie 21" onclick="z21_kowalski('')">
             <input type="button" value="zamknij okno" onclick="okno_zamknij_kowalski('')"/>
         </form>
     </body>
