--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
             {
                 window.open("zad21_kowa.html","okienko_z21","toolbar=no,directories=no,menubar=no");
             }
+            function z35_kowalski()
+            {
+                window.open("zad35_kowa.html","okienko_z35","toolbar=no,directories=no,menubar=no");
+            }
+            function z36_kowalski()
+            {
+                window.open("zad36_kowa.html","okienko_z36","toolbar=no,directories=no,menubar=no");
+            }
             function okno_zamknij_kowalski()
             {
                 window.close()
@@ -86,6 +94,8 @@
             <input type="button" value="zadanie 18" onclick="z18_kowalski('')">
             <input type="button" value="zadanie 19" onclick="z19_kowalski('')">
             <input type="button" value="zadanie 21" onclick="z21_kowalski('')">
+            <input type="button" value="zadanie 35" onclick="z35_kowalski('')">
+            <input type="button" value="zadanie 36" onclick="z36_kowalski('')">
             <input type="button" value="zamknij okno" onclick="okno_zamknij_kowalski('')"/>
         </form>
     </body>
