--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
             {
                 window.open("zad36_kowa.html","okienko_z36","toolbar=no,directories=no,menubar=no");
             }
+			function zadanie28() {
+				window.open("zad28_kowa.html", "oknoz28", "toolbar=no,directories=no,menubar=no");
+			}
+			function zadanie29() {
+				window.open("zad29_kowa.html", "oknoz29", "toolbar=no,directories=no,menubar=no");
+			}
+			function zadanie30() {
+				window.open("zad30_kowa.html", "oknoz30", "toolbar=no,directories=no,menubar=no");
+			}
+			function zadanie31() {
+				window.open("zad31_kowa.html", "oknoz31", "toolbar=no,directories=no,menubar=no");
+			}
+			function zadanie32() {
+				window.open("zad32_kowa.html", "oknoz32", "toolbar=no,directories=no,menubar=no");
+			}
             function okno_zamknij_kowalski()
             {
                 window.close()
@@ -96,6 +111,11 @@
             <input type="button" value="zadanie 21" onclick="z21_kowalski('')">
             <input type="button" value="zadanie 35" onclick="z35_kowalski('')">
             <input type="button" value="zadanie 36" onclick="z36_kowalski('')">
+			<input type="button" value="zadanie 28" onclick="zadanie28('')">
+			<input type="button" value="zadanie 29" onclick="zadanie29('')">
+			<input type="button" value="zadanie 30" onclick="zadanie30('')">
+			<input type="button" value="zadanie 31" onclick="zadanie31('')">
+			<input type="button" value="zadanie 32" onclick="zadanie32('')">
             <input type="button" value="zamknij okno" onclick="okno_zamknij_kowalski('')"/>
         </form>
     </body>
