--- a/index.html
+++ b/index.html
@@ -62,14 +62,6 @@
             {
                 window.open("zad21_kowa.html","okienko_z21","toolbar=no,directories=no,menubar=no");
             }
-            function z35_kowalski()
-            {
-                window.open("zad35_kowa.html","okienko_z35","toolbar=no,directories=no,menubar=no");
-            }
-            function z36_kowalski()
-            {
-                window.open("zad36_kowa.html","okienko_z36","toolbar=no,directories=no,menubar=no");
-            }
 			function zadanie28() {
 				window.open("zad28_kowa.html", "oknoz28", "toolbar=no,directories=no,menubar=no");
 			}
@@ -85,6 +77,26 @@
 			function zadanie32() {
 				window.open("zad32_kowa.html", "oknoz32", "toolbar=no,directories=no,menubar=no");
 			}
+			function z35_kowalski()
+            {
+                window.open("zad35_kowa.html","okienko_z35","toolbar=no,directories=no,menubar=no");
+            }
+            function z36_kowalski()
+            {
+                window.open("zad36_kowa.html","okienko_z36","toolbar=no,directories=no,menubar=no");
+            }
+			function zadanie37()
+            {
+                window.open("zadanie37.html","okienko_z37","toolbar=no,directories=no,menubar=no");
+            }
+            function zadanie39()
+            {
+                window.open("zadanie39.html","okienko_z39","toolbar=no,directories=no,menubar=no");
+            }
+			function zadanie40()
+            {
+                window.open("zadanie40.html","okienko_z40","toolbar=no,directories=no,menubar=no");
+            }
             function okno_zamknij_kowalski()
             {
                 window.close()
@@ -109,13 +121,18 @@
             <input type="button" value="zadanie 18" onclick="z18_kowalski('')">
             <input type="button" value="zadanie 19" onclick="z19_kowalski('')">
             <input type="button" value="zadanie 21" onclick="z21_kowalski('')">
-            <input type="button" value="zadanie 35" onclick="z35_kowalski('')">
-            <input type="button" value="zadanie 36" onclick="z36_kowalski('')">
 			<input type="button" value="zadanie 28" onclick="zadanie28('')">
 			<input type="button" value="zadanie 29" onclick="zadanie29('')">
 			<input type="button" value="zadanie 30" onclick="zadanie30('')">
 			<input type="button" value="zadanie 31" onclick="zadanie31('')">
 			<input type="button" value="zadanie 32" onclick="zadanie32('')">
+			<br><br>
+			<input type="button" value="zadanie 35" onclick="z35_kowalski('')">
+            <input type="button" value="zadanie 36" onclick="z36_kowalski('')">
+			<input type="button" value="zadanie 37" onclick="zadanie37('')">
+            <input type="button" value="zadanie 39" onclick="zadanie39('')">
+			<input type="button" value="zadanie 40" onclick="zadanie40('')">
+			<br>
             <input type="button" value="zamknij okno" onclick="okno_zamknij_kowalski('')"/>
         </form>
     </body>
